Swagger-ui and docker-compose work, need to update README
